--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,17 @@ services:
       - "8080:80"
 
 
-  postgres:
-    image: postgres:14-alpine
-    ports:
-      - 5435:5432
-    volumes:
-      - ~/apps/postgres:/var/lib/postgresql/data
+  db:
+    image: mariadb
+    restart: always
     environment:
-      - POSTGRES_PASSWORD=Passw0rd!
-      - POSTGRES_USER=isitech
-      - POSTGRES_DB=isitech_db
+      MARIADB_ROOT_PASSWORD: password
+      MARIADB_DATABASE: isitech
+      MARIADB_USER: isitech
+      MARIADB_PASSWORD: isitech
+    ports:
+      - "3306:3306"
+    volumes:
+        - ./dbvolume:/var/lib/mysql
+    expose:
+      - "3306"
